--- a/Serpent/Serpent/Serpent.csproj
+++ b/Serpent/Serpent/Serpent.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Raylib-CsLo" Version="4.2.0.9" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
