--- a/TemplateRaylib/TemplateRaylib/TemplateRaylib.csproj
+++ b/TemplateRaylib/TemplateRaylib/TemplateRaylib.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Raylib-cs" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ORN\" />
+    </ItemGroup>
+
 </Project>
