--- a/TemplateRaylib/TemplateRaylib/TemplateRaylib.csproj
+++ b/TemplateRaylib/TemplateRaylib/TemplateRaylib.csproj
@@ -21,6 +21,18 @@
       <None Update="assets\images\ship.png">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="assets\sons\cool.mp3">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="assets\sons\explode.wav">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="assets\sons\techno.mp3">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="assets\font\PixelMaster.ttf">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
