--- a/Mon Snake/MonSnake/MonSnake.csproj
+++ b/Mon Snake/MonSnake/MonSnake.csproj
@@ -69,6 +69,12 @@
       <None Update="assets\sons\SnakeRaylib.mp3">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="assets\font\SnakeBusiness.ttf">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="assets\sons\Menu.mp3">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
